# ottoinfo-docker2026

./: .env  .gitignore  README.md  cspell.json  docker-compose.yaml
.cursor/rules/: docker.mdc
additionalServices/checkmk/: .env  README.md  docker-compose.yaml
additionalServices/dockhand/: .env  README.md  docker-compose.yaml
additionalServices/dozzle/: .env  README.md  docker-compose.yaml
additionalServices/grafana/: .env  README.md  docker-compose.yaml
additionalServices/it-tools/: .env  README.md  docker-compose.yaml
additionalServices/obsidian/: .env  README.md  docker-compose.yaml
additionalServices/portainer/: .env  README.md  docker-compose.yaml
additionalServices/uptime-kuma/: .env  README.md  docker-compose.yaml
backendServices/: .env  Dockerfile  Dockerfile.local  README.md  docker-compose.yaml  docker-service-adminer.yaml  docker-service-postgres.yaml
backendServices/scripts/: .bashrc.txt  dump_migration_databases.sh  logger.sh  pyproject.toml  start.sh  startFresh.sh
docs/: .Example.md  Backend.md  ChangeLog.md  Docker.md  DockerHelp.md  Frontend.md  LocalSetup.md  OrbStack.md  Portainer.md  Secrets.md  Traefik.md
frontendServices/: .env  Dockerfile  README.md  docker-compose.yaml
frontendServices/portfolioUI/: .env  docker-compose.yaml
frontendServices/portfolioUI/scripts/: nodeStart.sh
frontendServices/prodTest/: .dockerignore  BUILD_NOTES.md  Dockerfile  README.md  build.sh
frontendServices/scripts/: .bashrc.txt  docker.sh  nodeStart.sh
scripts/: additionalServices.sh  backendServices.sh  bashUpgrade.sh  brew.sh  brewCheck.sh  choose.sh  dns.sh  dockerMachine.sh  dockerNetwork.sh  frontendServices.sh  githubTokens.sh  hosts.sh  macHTTP.sh  newMachine.sh  orbStack.sh  proxyServices.sh  setup.sh  sslCerts.sh  startServices.sh  stopKillServices.sh  stopServices.sh
scripts/helpers/: brewInstall.sh  exit.sh  index.sh  logger.sh
traefik-proxy/: .env  README.md  docker-compose.yaml
traefik-proxy/addOns/crowdsec/: .env  README.md  docker-compose.yaml
traefik-proxy/addOns/crowdsec/config/: appsec.yaml
traefik-proxy/addOns/crowdsec/scripts/: start.sh
traefik-proxy/addOns/error-pages/: .env  docker-compose.yaml
traefik-proxy/addOns/errorPages/: .env  docker-compose.yaml
traefik-proxy/addOns/jaeger/: .env  docker-compose.yaml
traefik-proxy/addOns/whoami/: .env  docker-compose.yaml
traefik-proxy/certs/: ottoinfo.local.crt  ottoinfo.local.key
traefik-proxy/config/: traefik.yaml
traefik-proxy/config/dynamic/: dockhand.yaml  dozzle.yaml  error.yaml  grafana.yaml  metrics-grafana.yaml  metrics-jaeger.yaml  metrics-loki.yaml  metrics-prometheus.yaml  middleware.yaml  obsidian.yaml  portainer.yaml  postgres.yaml  redirectAll.yaml  tls.yaml  tools.yaml  traefik.yaml  www.yaml
